tests/api_misuse/register_struct_with_missing_constructor.rs
fn main() {}



trait MyTrait {}

struct MyStruct;

#[traitreg::register(new)]
impl MyTrait for MyStruct {}
